ci: add required permissions for gh-pages deploy

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -8,6 +8,12 @@ on:
   # Allow manual trigger (workflow_dispatch)
   workflow_dispatch:
 
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     uses: hotosm/gh-workflows/.github/workflows/pnpm_build.yml@2.0.1
