--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,10 +10,11 @@ on:
 
 jobs:
   build:
-    uses: hotosm/gh-workflows/.github/workflows/pnpm_build.yml@2.0.1
+    uses: hotosm/gh-workflows/.github/workflows/pnpm_build.yml@2.0.2
     with:
       command: build
       output_path: dist
+      github_pages: true
 
   deploy:
     needs: build
@@ -26,12 +27,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: build
+
