--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,6 +3,7 @@ name: 📖 Publish Docs
 on:
   push:
     paths:
+      - astro.config.mjs
       - src/**
     branches: [main]
   # Allow manual trigger (workflow_dispatch)
