--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.3",
-    "@astrojs/starlight": "^0.25.2",
-    "astro": "^4.10.2",
-    "sharp": "^0.32.6",
-    "typescript": "^5.5.4"
+    "@astrojs/starlight": "^0.25.5",
+    "@hotosm/ui": "0.2.0-b6",
+    "astro": "^4.16.9",
+    "maplibre-gl": "^4.7.1",
+    "sharp": "^0.32.6"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "unocss": "^0.64.0"
+  },
+  "peerDependencies": {
+    "@shoelace-style/shoelace": "^2.17.1"
   }
 }
