--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@astrojs/check": "^0.8.3",
     "@astrojs/starlight": "^0.25.5",
     "@hotosm/ui": "0.2.0-b6",
+    "@maplibre/maplibre-gl-geocoder": "^1.7.0",
     "astro": "^4.16.9",
     "maplibre-gl": "^4.7.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "terra-draw": "1.0.0-beta.8"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
